--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "cordova-multidex",
-  "version": "1.0.0",
-  "description": "Enable android multidex mode",
+  "name": "cordova-plugin-androidx-multidex",
+  "version": "2.0.0",
+  "description": "Enable androidX multidex mode",
   "main": "updateMultidexManifest.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jwal149/cordova-multidex.git"
+    "url": "git+https://github.com/GartorwareCorp/cordova-plugin-androidx-multidex.git"
   },
   "keywords": [
     "cordova",
     "android",
     "multidex"
   ],
-  "author": "jwal149",
+  "author": "jwal149,c00",
+  "contributors": ["Gartorware <gartorware@gmail.com>"],
   "bugs": {
-    "url": "https://github.com/jwal149/cordova-multidex/issues"
+    "url": "https://github.com/GartorwareCorp/cordova-plugin-androidx-multidex/issues"
   },
-  "homepage": "https://github.com/jwal149/cordova-multidex#readme"
+  "homepage": "https://github.com/GartorwareCorp/cordova-plugin-androidx-multidex#readme"
 }
