--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,14 @@ android {
         // Enabling multidex support.
         multiDexEnabled true
     }
+    buildTypes {
+        debug {
+        minifyEnabled false
+        }
+    }
+    dexOptions {
+        preDexLibraries true
+    }
     configurations { 
         //all*.exclude group: 'com.google.android.gms'
         //all*.exclude group: 'com.android.support', module: 'support-v4'
